feat : styles are added successfully

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
   </head>
   <body>
     <main class="main-container">
+      <!-- header section -->
+
       <header class="head-title">
         <h1>table component</h1>
       </header>
 
+      <!-- table section -->
       <section class="table-section">
-        <table class="table-container">
-          <thead>
+        <table class="table-container" cellspacing="0px">
+          <thead class="table-head">
             <tr>
               <th>s.no</th>
               <th>emp name</th>
@@ -32,7 +35,23 @@
               <th>delete</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class="table-body">
+            <tr>
+              <td>1</td>
+              <td>gowtham</td>
+              <td>frontend developer</td>
+              <td>chennai</td>
+              <td><i class="fa-solid fa-pen-to-square"></i></td>
+              <td><i class="fa-solid fa-trash"></i></td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>gowtham</td>
+              <td>frontend developer</td>
+              <td>chennai</td>
+              <td><i class="fa-solid fa-pen-to-square"></i></td>
+              <td><i class="fa-solid fa-trash"></i></td>
+            </tr>
             <tr>
               <td>1</td>
               <td>gowtham</td>
@@ -44,8 +63,12 @@
           </tbody>
         </table>
       </section>
-      <footer>
-        <span>designed and developed by @gowtham-mathiyazhagan</span>
+
+      <!-- footer section -->
+      <footer class="footer">
+        <a href="mailto:gowthammathi07@gmail.com"
+          >designed and developed by @gowtham-mathiyazhagan</a
+        >
       </footer>
     </main>
 
