fix : changes added

--- a/index.html
+++ b/index.html
@@ -35,32 +35,7 @@
               <th>delete</th>
             </tr>
           </thead>
-          <tbody class="table-body">
-            <tr>
-              <td>1</td>
-              <td>gowtham</td>
-              <td>frontend developer</td>
-              <td>chennai</td>
-              <td><i class="fa-solid fa-pen-to-square"></i></td>
-              <td><i class="fa-solid fa-trash"></i></td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>gowtham</td>
-              <td>frontend developer</td>
-              <td>chennai</td>
-              <td><i class="fa-solid fa-pen-to-square"></i></td>
-              <td><i class="fa-solid fa-trash"></i></td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>gowtham</td>
-              <td>frontend developer</td>
-              <td>chennai</td>
-              <td><i class="fa-solid fa-pen-to-square"></i></td>
-              <td><i class="fa-solid fa-trash"></i></td>
-            </tr>
-          </tbody>
+          <tbody class="table-body" id="tbody"></tbody>
         </table>
       </section>
 
